--- a/app/views/public_calendar/index.html.erb
+++ b/app/views/public_calendar/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Community Calendar</h1>
-<p>This is the backend Rails app. The public React calendar will consume the API.</p>
+
+<div id="community-calendar-root"></div>
+
+<style>
+  /* Schedule-X React wrapper must have explicit size. :contentReference[oaicite:17]{index=17} */
+  .sx-react-calendar-wrapper {
+    width: 100%;
+    height: 80vh;
+    max-height: 900px;
+  }
+</style>
