--- a/app/views/admin/venues/edit.html.erb
+++ b/app/views/admin/venues/edit.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Editing venue</h1>
 
-<%= render "form", admin_venue: @admin_venue %>
+<%= render "form", venue: @venue %>
 
 <br>
 
 <div>
-  <%= link_to "Show this venue", @admin_venue %> |
+  <%= link_to "Show this venue", @venue %> |
   <%= link_to "Back to venues", admin_venues_path %>
 </div>
