--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: admin_category) do |form| %>
-  <% if admin_category.errors.any? %>
+<%= form_with(model: category, url: category.persisted? ? admin_category_path(category) : admin_categories_path) do |form| %>
+  <% if category.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(admin_category.errors.count, "error") %> prohibited this admin_category from being saved:</h2>
+      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
       <ul>
-        <% admin_category.errors.each do |error| %>
+        <% category.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
