--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Editing category</h1>
 
-<%= render "form", admin_category: @admin_category %>
+<%= render "form", category: @category %>
 
 <br>
 
 <div>
-  <%= link_to "Show this category", @admin_category %> |
+  <%= link_to "Show this category", @category %> |
   <%= link_to "Back to categories", admin_categories_path %>
 </div>
