--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -4,11 +4,11 @@
 
 <h1>Categories</h1>
 
-<div id="admin_categories">
-  <% @admin_categories.each do |admin_category| %>
-    <%= render admin_category %>
+<div id="categories">
+  <% @categories.each do |category| %>
+    <%= render category %>
     <p>
-      <%= link_to "Show this category", admin_category %>
+      <%= link_to "Show this category", admin_category_path(category) %>
     </p>
   <% end %>
 </div>
