--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -2,7 +2,7 @@
 
 <h1>New category</h1>
 
-<%= render "form", admin_category: @admin_category %>
+<%= render "form", category: @category %>
 
 <br>
 
