--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: admin_event) do |form| %>
-  <% if admin_event.errors.any? %>
+<%= form_with(model: event, url: event.persisted? ? admin_event_path(event) : admin_events_path) do |form| %>
+  <% if event.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(admin_event.errors.count, "error") %> prohibited this admin_event from being saved:</h2>
+      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
-        <% admin_event.errors.each do |error| %>
+        <% event.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
