--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Editing event</h1>
 
-<%= render "form", admin_event: @admin_event %>
+<%= render "form", event: @event %>
 
 <br>
 
 <div>
-  <%= link_to "Show this event", @admin_event %> |
+  <%= link_to "Show this event", @event %> |
   <%= link_to "Back to events", admin_events_path %>
 </div>
