--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @admin_event %>
+<%= render @event %>
 
 <div>
-  <%= link_to "Edit this event", edit_admin_event_path(@admin_event) %> |
+  <%= link_to "Edit this event", edit_admin_event_path(@event) %> |
   <%= link_to "Back to events", admin_events_path %>
 
-  <%= button_to "Destroy this event", @admin_event, method: :delete %>
+  <%= button_to "Destroy this event", admin_event_path(@event), method: :delete %>
 </div>
