--- a/app/views/admin/tags/edit.html.erb
+++ b/app/views/admin/tags/edit.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Editing tag</h1>
 
-<%= render "form", admin_tag: @admin_tag %>
+<%= render "form", tag: @tag %>
 
 <br>
 
 <div>
-  <%= link_to "Show this tag", @admin_tag %> |
+  <%= link_to "Show this tag", @tag %> |
   <%= link_to "Back to tags", admin_tags_path %>
 </div>
