--- a/app/views/admin/venues/_form.html.erb
+++ b/app/views/admin/venues/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: admin_venue) do |form| %>
-  <% if admin_venue.errors.any? %>
+<%= form_with(model: venue, url: venue.persisted? ? admin_venue_path(venue) : admin_venues_path) do |form| %>
+  <% if venue.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(admin_venue.errors.count, "error") %> prohibited this admin_venue from being saved:</h2>
+      <h2><%= pluralize(venue.errors.count, "error") %> prohibited this venue from being saved:</h2>
 
       <ul>
-        <% admin_venue.errors.each do |error| %>
+        <% venue.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
